src/QSize.h


// 
// This file has been automatically generated by RaQt_maker V0.0.3.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQSizeCtor_1();
EXTERNC void * QWQSizeCtor_2(int32_t  w, int32_t  h);
EXTERNC int8_t  QWQSizeisNull(void * obj);
EXTERNC int8_t  QWQSizeisEmpty(void * obj);
EXTERNC int8_t  QWQSizeisValid(void * obj);
EXTERNC int32_t  QWQSizewidth(void * obj);
EXTERNC int32_t  QWQSizeheight(void * obj);
EXTERNC void  QWQSizesetWidth(void * obj, int32_t  w);
EXTERNC void  QWQSizesetHeight(void * obj, int32_t  h);
EXTERNC void * QWQSizeexpandedTo(void * obj, void * arg1);
EXTERNC void * QWQSizeboundedTo(void * obj, void * arg1);
EXTERNC void QWQSizeDtor(void *);